--- a/index.html
+++ b/index.html
@@ -1,11 +1,27 @@
 <style>
-background{ 
-    color:turquoise;
+body{
+    display: flex;
+    margin:0;
+    color: #676767;
+    background-color:wheat;
+    background-image:url("images/67.jpg");
+    align-items: center;
+    flex-direction: column;
+    justify-content: center;
+    background-repeat: no-repeat;
+    background-size: cover;
 }
-
+.boxbox{
+    margin-top: 5% ;
+    background-color: rgba(255,255,255,0.2);
+    width: 80%;
+    height: 80%;
+}
 
 
 </style>
 <body>
-    hello world
+    <div class="boxbox">
+     hello world
+    </div>
 </body>
