--- a/otherabout.html
+++ b/otherabout.html
@@ -24,7 +24,7 @@
     <div class="logo"><img src="images/newestlogo.png"></div>
     <nav>
       <ul>
-        <li><a href="#">Home</a></li>
+        <li><a href="index.html">Home</a></li>
         <li><a href="about.html">About</a></li>
         <li class="sub-menu"><a href="#">Resources</a>
           <ul>
@@ -37,7 +37,7 @@
         <li><a href="team.html">Team</a></li>
         <li class="sub-menu"><a href="#">Topics</a>
           <ul>
-            <li><a href="otherabout.html">About</a></li>
+            <li><a href="#">About</a></li>
             <li><a href="story.html">Story</a></li>
           </ul>
         </li>
@@ -48,7 +48,7 @@
   </header>
   
     <div class="boxbox">
-    <h1>Welcome!</h1>
+    <h1>Important Topics</h1>
      Corals are colonial marine invertebrates within the subphylum Anthozoa of the phylum Cnidaria. They typically form compact colonies of many identical individual polyps. Coral species include the important reef builders that inhabit tropical oceans and secrete calcium carbonate to form a hard skeleton.A coral "group" is a colony of very many genetically identical polyps. Each polyp is a sac-like animal typically only a few millimeters in diameter and a few centimeters in height. A set of tentacles surround a central mouth opening. Each polyp excretes an exoskeleton near the base. Over many generations, the colony thus creates a skeleton characteristic of the species which can measure up to several meters in size. Individual colonies grow by asexual reproduction of polyps. Corals also breed sexually by spawning: polyps of the same species release gametes simultaneously overnight, often around a full moon. Fertilized eggs form planulae, a mobile early form of the coral polyp which, when mature, settles to form a new colony.
 
 Although some corals are able to catch plankton and small fish using stinging cells on their tentacles, most corals obtain the majority of their energy and nutrients from photosynthetic unicellular dinoflagellates of the genus Symbiodinium that live within their tissues. These are commonly known as zooxanthellae and give the coral color. Such corals require sunlight and grow in clear, shallow water, typically at depths less than 60 metres (200 feet; 33 fathoms), but corals in the genus Leptoseris have been found as deep as 172 metres (564 feet; 94 fathoms).[1] Corals are major contributors to the physical structure of the coral reefs that develop in tropical and subtropical waters, such as the Great Barrier Reef off the coast of Australia. These corals are increasingly at risk of bleaching events where polyps expel the zooxanthellae in response to stress such as high water temperature or toxins.
@@ -69,7 +69,7 @@ Presently, corals are classified as species of animals within the sub-classes He
   <script src="https://code.jquery.com/jquery-3.3.1.js"></script>
   <script>
     $(document).ready(function() {
-    $('.menu-toggle').click(function(){
+    $('.menu-toggle').click(function(){s
         $('nav').toggleClass('active');
     })
     
