--- a/index.html
+++ b/index.html
@@ -25,22 +25,21 @@
     <nav>
       <ul>
         <li><a href="#">Home</a></li>
-        <li><a href="about.html">About</a></li>
-        <li class="sub-menu"><a href="#">Resources</a>
+      <li class="sub-menu"><a href="#">About</a>
           <ul>
-            <li><a href="#">Link 1</a></li>
-            <li><a href="#">Link 2</a></li>
-            <li><a href="#">Link 3</a></li>
-            <li><a href="#">Link 4</a></li>
-         </ul>
-        </li>
-        <li><a href="team.html">Team</a></li>
-        <li class="sub-menu"><a href="#">Topics</a>
-          <ul>
-            <li><a href="otherabout.html">About</a></li>
-            <li><a href="story.html">Story</a></li>
+            <li><a href="topic1.html">Topic 1</a></li>
+            <li><a href="topic2.html">Topic 2</a></li>
           </ul>
         </li>
+        <li class="sub-menu"><a href="#">Resources</a>
+          <ul>
+           <li><a href="https://orcanation.org/blog/tanglin-trust-students-lead-coral-conservation-legacy-ocean-reporter-series/?utm_source=ig&utm_medium=social&utm_content=link_in_bio&fbclid=PAc3J0YwZhcHBfaWQMMjU2MjgxMDQwNTU4AAGnirpLx5E_8BBByDdUO_QzuBRNAN2oC7mTDreSb-XWutQNNl3qsR570AsNJ1A&brid=ziFc99WghGt7S55RKnmwdQ">OrcaNation Blog</a></li>
+            <li><a href="https://coralrestoration.org/why-save-coral-reefs/">Coral Restaration</a></li>
+            <li><a href="https://www.wwf.sg/humansofnature/coral-restoration/">World Wildlife Fund</a></li>
+            <li><a href="https://reef-world.org/coral-reef-threats">Reef World Foundation</a></li>
+         </ul>
+        </li>
+         <li><a href="team.html">Team</a></li>
         <li><a href="contact.html">Contact</a></li>
       </ul>
     </nav>
@@ -64,7 +63,7 @@ The Persian polymath Al-Biruni (d.1048) classified sponges and corals as animals
 Presently, corals are classified as species of animals within the sub-classes Hexacorallia and Octocorallia of the class Anthozoa in the phylum Cnidaria.[8] Hexacorallia includes the stony corals and these groups have polyps that generally have a 6-fold symmetry. Octocorallia includes blue coral and soft corals. Species of Octocorallia have polyps with an eightfold symmetry, with each polyp having eight tentacles and eight mesenteries. The group of corals is paraphyletic because the sea anemones are also in the sub-class Hexacorallia.
     </div>
     <div class="footer">
-        © Copyright 2025
+        © Copyright 2026
     </div>
   <script src="https://code.jquery.com/jquery-3.3.1.js"></script>
   <script>
