--- a/otherabout.html
+++ b/otherabout.html
@@ -28,10 +28,10 @@
         <li><a href="about.html">About</a></li>
         <li class="sub-menu"><a href="#">Resources</a>
           <ul>
-            <li><a href="#">Link 1</a></li>
-            <li><a href="#">Link 2</a></li>
-            <li><a href="#">Link 3</a></li>
-            <li><a href="#">Link 4</a></li>
+            <li><a href="https://orcanation.org/blog/tanglin-trust-students-lead-coral-conservation-legacy-ocean-reporter-series/?utm_source=ig&utm_medium=social&utm_content=link_in_bio&fbclid=PAc3J0YwZhcHBfaWQMMjU2MjgxMDQwNTU4AAGnirpLx5E_8BBByDdUO_QzuBRNAN2oC7mTDreSb-XWutQNNl3qsR570AsNJ1A&brid=ziFc99WghGt7S55RKnmwdQ">OrcaNation Blog</a></li>
+            <li><a href="https://coralrestoration.org/why-save-coral-reefs/">Coral Restaration</a></li>
+            <li><a href="https://www.wwf.sg/humansofnature/coral-restoration/">World Wildlife Fund</a></li>
+            <li><a href="https://reef-world.org/coral-reef-threats">Reef World Foundation</a></li>
          </ul>
         </li>
         <li><a href="team.html">Team</a></li>
