--- a/about.html
+++ b/about.html
@@ -25,11 +25,7 @@
     <nav>
       <ul>
         <li><a href="index.html">Home</a></li>
-        <li class="sub-menu"><a href="#">About</a>
-          <ul>
-            <li><a href="topic1.html">Topic 1</a></li>
-            <li><a href="topic2.html">Topic 2</a></li>
-          </ul>
+        <li><a href="#">About</a>
         </li>
         <li class="sub-menu"><a href="#">Resources</a>
           <ul>
@@ -48,9 +44,12 @@
   
     <div class="boxbox">
     <h1>About</h1>
-    Why We Took Action: The Deidre Lew Service Award
-The Deidre Lew Service Award was created by the Tanglin Trust School (TTS) Foundation in 2018, as a way for TTS students and alumni to give back to the community. It comes with funds from the Foundation in hopes of supporting and driving forward student-led initiatives.  
-We applied for the Deirdre Lew Service Award with the aim of raising awareness about the importance of marine conservation and coral reefs. Our mission stemmed from the UN sustainable goal #14 ‘Life Below Water’, and we hope to establish a long term project, a legacy, by taking the initial steps and inspiring the students of Tanglin to continue coral conservation efforts at Rawa for years to come. Our team is made up of Tanglin students ranging from the age of 12 to 17, all of whom bring unique ideas and initiative to the table. We believe this diversity makes our project more inclusive and accessible to all students that are eager to learn and help. We look forward to the day, when members of the Tanglin family visit the island, they will be able to see the enduring legacy we have left behind. We strive to be brave adventurers, strong-minded people, leaders and action-takers. The voice for the oceans. 
+<p>Tanglin Marine Conservation is a student-led initiative born out of a deep and shared passion for protecting the world's oceans. Founded by a dedicated team of students from Tanglin Trust School in Singapore, our group ranges in age from 12 to 17, bringing together young voices from diverse backgrounds who are united by one common goal: to take meaningful action for marine conservation. We believe that age is no barrier to making a real difference, and that the next generation of ocean advocates is already here.Our journey began when we applied for the Deidre Lew Service Award, an initiative created by the Tanglin Trust School Foundation in 2018 to empower students and alumni to give back to the community. Inspired by the United Nations Sustainable Development Goal #14, Life Below Water, we set out to raise awareness about the critical state of the world's coral reefs and establish a lasting legacy of conservation action. Winning the award gave us both the funding and the motivation to turn our vision into reality.</p>
+<br> <center> <img src="images/image.jpg" style="width:800px; height:500px; margin:20px;"> <br> <b>Figure: Tanglin Marine Team in Rawa Island</b></center>
+<p>In July 2024, our team travelled to Rawa Island, Malaysia, where we partnered with OrcaNation to conduct real, hands-on conservation work beneath the surface. After earning our PADI Open Water diving qualifications, we participated in underwater biodiversity assessments, monitored existing coral beds, and tracked ecological trends across different reef zones. Working alongside marine professionals gave us an invaluable window into the science and dedication required to protect these fragile ecosystems.
+The urgency behind our work cannot be overstated. Coral reefs are among the most biodiverse and vital ecosystems on the planet, and they face a 90% extinction risk if global temperatures rise beyond 1.5°C. We have already lost 40% of the world's corals, and the window for action is narrowing. These reefs support over half a billion people through food, income, and coastal protection, making their preservation not just an environmental issue, but a deeply human one.</p> <br> <center> <img src="images/image2.jpg" style="width:800px; height:500px; margin:20px;"> <br> <b>Figure: Students studying different marine species for identification.</b> </center>
+<p>What makes Tanglin Marine Conservation unique is our commitment to legacy. This project is not just about what we accomplish today. It is about laying the groundwork for future Tanglin students to continue and expand upon this work for years to come. We have designated reef areas on Rawa Island specifically for ongoing student study and observation, creating a living classroom beneath the waves that will grow and evolve with each new generation of student conservationists.</p>
+<p>We are dreamers, but we are also doers. We are brave adventurers, strong-minded leaders, and passionate advocates, and we are the voice for the oceans. Whether you are a student, teacher, parent, or simply someone who cares about the future of our planet, we invite you to join us. Through raising awareness, supporting marine protected areas, and taking small but meaningful steps every day, we can together protect the ocean for generations to come. Follow our journey on Instagram at @ttsmarineconservation and be part of the change.</p>
 <br> <center> <img src="images/turtle.png" style="width:500px; height:500px; margin:20px;"> <br> <b>Figure: A turtle swimming in a coral reef in Rawa Island, Malaysia where TTS was conducting a coral reef survey.</b></center>
     </div>
     <div class="footer">
