--- a/index.html
+++ b/index.html
@@ -25,11 +25,7 @@
     <nav>
       <ul>
         <li><a href="#">Home</a></li>
-      <li class="sub-menu"><a href="#">About</a>
-          <ul>
-            <li><a href="topic1.html">Topic 1</a></li>
-            <li><a href="topic2.html">Topic 2</a></li>
-          </ul>
+      <li ><a href="about.html">About</a>
         </li>
         <li class="sub-menu"><a href="#">Resources</a>
           <ul>
